# RapfiPortal

./: .gitignore  PortalUI_FullReport.md  UI.md  a.out  binary_file_deep_dive.md  board_design.md  distribute.sh  gdb_script.txt  implementation_plan_1.md  patch.diff  print_board  print_board.cpp  print_board_xy  print_board_xy.cpp  repro_crash.py  scratch_coord  scratch_coord.cpp  test2_out.txt  test_attack.txt  test_attack2.txt  test_eval.cpp  test_fuse  test_fuse.cpp  test_getKey.cpp  test_idx.patch  test_key.cpp  test_loop.cpp  test_lut.cpp  test_out.txt  test_output_fixed.txt  test_output_revert.txt  test_output_reverted_baseline.txt  test_output_userfix.txt  test_output_v11.txt  test_output_v5.txt  test_output_v6.txt  test_output_v7.txt  test_output_v8.txt  test_output_v9.txt  test_parse  (+7 more)
gomoku-portal-ui/: meson.build
gomoku-portal-ui/.cache/clangd/index/: AnalysisController.cpp.7F5A1F02652B92AF.idx  AnalysisController.hpp.DA39E48FAE1522A1.idx  AnalysisInfo.hpp.5A1589722FF5C8F1.idx  AnalysisPanel.cpp.E5A1408FA40BED58.idx  AnalysisPanel.hpp.761E68246C313ECB.idx  Application.cpp.883B85E7B0758E01.idx  Application.hpp.915F57C8151F9603.idx  Board.cpp.DD46E2E0A44FFF59.idx  Board.hpp.DA6F87366CBCF279.idx  BoardCanvas.cpp.462458A679A63BAD.idx  BoardCanvas.hpp.AD4C8D4D5286D464.idx  BoardRenderer.cpp.FCDCF81796A204DA.idx  BoardRenderer.hpp.DFEB46F010D9DE66.idx  Cell.hpp.ACE72A958585CC58.idx  ClockWidget.cpp.C00C13B5C6EB1A51.idx  ClockWidget.hpp.08087BCF4E7BAC55.idx  Coord.hpp.459543A182687535.idx  CoordOverlay.cpp.169F5DE4BE1ACAD1.idx  CoordOverlay.hpp.0F76222D1694794E.idx  DatabaseController.cpp.38F0C349D253B1D8.idx  DatabaseController.hpp.B57E268375863210.idx  DatabasePanel.cpp.36C10FBBFE27D861.idx  DatabasePanel.hpp.74C66054738646F5.idx  DatabaseRecord.hpp.B9094DDF235FD035.idx  EngineConfig.hpp.60563009BA7E70F8.idx  EngineController.cpp.343B19985C832EA3.idx  EngineController.hpp.BC5F03A4D680DEB9.idx  EngineProcess.cpp.FC714B530B9ACB71.idx  EngineProcess.hpp.8E9A5980294797A0.idx  EngineProtocol.cpp.5DECB4F9ED939CDC.idx  EngineProtocol.hpp.BF0010683D6EFD09.idx  EngineSettingsPanel.cpp.8F44B6F8D95BA710.idx  EngineSettingsPanel.hpp.1791FD45FE5C3064.idx  EngineState.hpp.F77F49A9C8392E6F.idx  EvalBar.cpp.CE6C5F4F36591962.idx  EvalBar.hpp.AD0F4608F0C4C806.idx  GameController.cpp.9D81A3CFB93988FA.idx  GameController.hpp.E2011FB381D14243.idx  GameRecord.cpp.79FFE27F6EEC835B.idx  GameRecord.hpp.2441C8B40700773A.idx  (+26 more)
gomoku-portal-ui/data/spsa/: spsa_params.csv
gomoku-portal-ui/data/tournaments/: match_1.sgf  match_10.sgf  match_11.sgf  match_2.sgf  match_3.sgf  match_4.sgf  match_5.sgf  match_6.sgf  match_7.sgf  match_8.sgf  match_9.sgf
gomoku-portal-ui/src/: main.cpp
gomoku-portal-ui/src/controller/: AnalysisController.cpp  AnalysisController.hpp  DatabaseController.cpp  DatabaseController.hpp  GameController.cpp  GameController.hpp  SPSAController.cpp  SPSAController.hpp  SetupController.cpp  SetupController.hpp  TournamentController.cpp  TournamentController.hpp
gomoku-portal-ui/src/engine/: EngineConfig.hpp  EngineController.cpp  EngineController.hpp  EngineProcess.cpp  EngineProcess.hpp  EngineProtocol.cpp  EngineProtocol.hpp  EngineState.hpp
gomoku-portal-ui/src/model/: AnalysisInfo.hpp  Board.cpp  Board.hpp  Cell.hpp  DatabaseRecord.hpp  GameRecord.cpp  GameRecord.hpp  Move.hpp  OBFManager.cpp  OBFManager.hpp  PortalTopology.hpp
gomoku-portal-ui/src/ui/: Application.cpp  Application.hpp  MainWindow.cpp  MainWindow.hpp
gomoku-portal-ui/src/ui/board/: BoardCanvas.cpp  BoardCanvas.hpp  BoardRenderer.cpp  BoardRenderer.hpp
gomoku-portal-ui/src/ui/panels/: AnalysisPanel.cpp  AnalysisPanel.hpp  DatabasePanel.cpp  DatabasePanel.hpp  EngineSettingsPanel.cpp  EngineSettingsPanel.hpp  LogPanel.cpp  LogPanel.hpp  OpeningEditorPanel.cpp  OpeningEditorPanel.hpp  SPSAPanel.cpp  SPSAPanel.hpp  TournamentPanel.cpp  TournamentPanel.hpp  UISettingsPanel.cpp  UISettingsPanel.hpp
gomoku-portal-ui/src/ui/widgets/: ClockWidget.cpp  ClockWidget.hpp  CoordOverlay.cpp  CoordOverlay.hpp  EvalBar.cpp  EvalBar.hpp  StatusIndicator.cpp  StatusIndicator.hpp
gomoku-portal-ui/src/util/: Coord.hpp  SettingsManager.cpp  SettingsManager.hpp  StringUtils.hpp
gomoku-portal-ui/tests/: test_board.cpp  test_engine_protocol.cpp
portal_src/: CMakeLists.txt  config.cpp  config.h  protocol.md  readme.md  test_pattern.cpp  test_portal.cpp
portal_src/.cache/clangd/index/: BS_thread_pool.hpp.1ED53598FEF1B19B.idx  argutils.cpp.E39B80C19D4F1349.idx  argutils.h.89B89A7162E4566E.idx  avx.h.FD573CF1587751E4.idx  avx2.h.D1002CED45F7E686.idx  benchmark.cpp.BD32CBF52DA25A02.idx  board.cpp.D254E65A515BB80C.idx  board.h.F9B37E7B659FAC0A.idx  cache.h.95D1FFD81D47D035.idx  check.h.722732122A018479.idx  command.cpp.BB85EF5FCC5772CB.idx  command.h.7BC6DD468089AADE.idx  config.cpp.D25185C890F7CD2C.idx  config.h.A1845A9009513777.idx  cpptoml.h.2C10298665D9F206.idx  cxxopts.hpp.AE2E77F0C029FFA5.idx  database.cpp.372D7AD3E0CB33BD.idx  dataentry.h.B98384593FFC6856.idx  dataprep.cpp.C5D583A6D57F155C.idx  dataset.cpp.276D69F5D2560303.idx  dataset.h.FD4D95E34645C6FF.idx  datawriter.cpp.9C718CFB85D277F9.idx  datawriter.h.FB7D64EEFD4C110C.idx  dbclient.cpp.9858CCAF73A7CF97.idx  dbclient.h.24AA1DE13A797EC0.idx  dbstorage.h.E288938649CEE99E.idx  dbtypes.cpp.2D39C53FCA7780E6.idx  dbtypes.h.1E5C9101145A845E.idx  dbutils.cpp.26472C7FE462980B.idx  dbutils.h.AE59E550A28DD5C2.idx  debug-trap.h.742816A6C31314B5.idx  eq_compare.hpp.BB1C915A21F9DD55.idx  eval.cpp.9BDEC764E159194B.idx  eval.h.5E1EAEDB3909015E.idx  evaluator.cpp.21B88B874A0B2230.idx  evaluator.h.14275F8041663944.idx  flat_fwd.hpp.6A66057BE9BD016D.idx  (+101 more)
portal_src/build-debug/: Makefile
portal_src/command/: gomocup.cpp
portal_src/core/: version.cpp
portal_src/eval/: eval.cpp  influence.cpp  influence.h  mix9svqnnue.cpp  mix9svqnnue.h
portal_src/game/: board.cpp  board.h  movegen.cpp
portal_src/search/: movepick.cpp  opening.cpp  searchcommon.h  searchthread.cpp
portal_src/search/ab/: search.cpp
portal_src/search/mcts/: node.cpp  node.h  search.cpp
(+222 files in other folders)
